@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.klinker.android.twitter"
-          android:versionCode="4"
-          android:versionName="1.05" >
+          android:versionCode="5"
+          android:versionName="1.051" >
 
     <uses-sdk
             android:minSdkVersion="14"
